--- a/AFA/AFA.csproj
+++ b/AFA/AFA.csproj
@@ -75,6 +75,17 @@
     <Compile Include="PetManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="EditPricingValues.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditPricingValues.Designer.cs">
+      <DependentUpon>EditPricingValues.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CompleteGraph.resx">
       <DependentUpon>CompleteGraph.cs</DependentUpon>
     </EmbeddedResource>
@@ -89,13 +100,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
+    <EmbeddedResource Include="EditPricingValues.resx">
+      <DependentUpon>EditPricingValues.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -108,6 +118,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\croppedResizedDog.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\croppedResizedBird.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\croppedResizedHorse.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\croppedResizedCat2.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
